<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/clear_button"
        android:text="@string/clear"
        android:textSize="30sp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/zero_button"
        android:text="@string/zero"
        android:textSize="30sp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        app:layout_constraintEnd_toStartOf="@+id/undo_button"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/undo_button"
        android:text="@string/undo"
        android:textSize="30sp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        app:layout_constraintStart_toEndOf="@+id/zero_button"
        app:layout_constraintEnd_toStartOf="@+id/equals_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/equals_button"
        android:text="@string/equals"
        android:textSize="30sp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/undo_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>